--- a/src/main/resources/webserver/template/movie/admin/statistic/statistic.html
+++ b/src/main/resources/webserver/template/movie/admin/statistic/statistic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Movie Admin</title>
+    <title>Filme Statistik</title>
     {% include '/webserver/template/header.html' %}
 </head>
 <body>
