--- a/src/main/resources/webserver/template/movie/admin/sortin/sortindvd.html
+++ b/src/main/resources/webserver/template/movie/admin/sortin/sortindvd.html
@@ -87,6 +87,7 @@
     </div>
     {% endif %}
     <div class="ui bottom attached segment">
+        <a class="ui secondary button" href="/movie/admin/sortin/dvd?reset">reset</a>
         <a class="ui primary button" href="/movie/admin/sortin/dvd?oldid={{ mainMovie.getId().get() | escape }}">weiter</a>
     </div>
     {% else %}
