--- a/src/main/resources/webserver/template/movie/admin/sortin/sortinbluray.html
+++ b/src/main/resources/webserver/template/movie/admin/sortin/sortinbluray.html
@@ -91,8 +91,8 @@
         <a class="ui primary button" href="/movie/admin/sortin/bluray?oldid={{ mainMovie.getId().get() | escape }}">weiter</a>
     </div>
     {% else %}
-    <div class="ui bottom attached info icon massage">
-        <i class="question icon"></i>
+    <div class="ui bottom attached info icon message">
+        <i class="info icon"></i>
         <div class="content">
             <p>Keine Filme vorhanden</p>
         </div>
